--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="intro-text">
                 <p>Hey There!</p>
                 <h1>I'm Sarah Onderdonk</h1>
-                <p>I'm a <span style="color: #ff69b4;">product manager</span> who also has experience in <span style="color: #ff69b4;">technical writing</span>, <span style="color: #ff69b4;">software engineering</span>, and <span style="color: #ff69b4;">education</span>. I believe in creating <span style="color: #ff69b4;">intuitive products</span> that <span style="color: #ff69b4;">empower</span> and <span style="color: #ff69b4;">enlighten </span>users.</p>
+                <p>I'm a <span style="color: #D81B60;">product manager</span> who also has experience in <span style="color: #D81B60;">technical writing</span>, <span style="color: #D81B60;">software engineering</span>, and <span style="color: #D81B60;">education</span>. I believe in creating <span style="color: #D81B60;">intuitive products</span> that <span style="color: #D81B60;">empower</span> and <span style="color: #D81B60;">enlighten </span>users.</p>
 
             </div>
             <div class="intro-image">
