--- a/work2.html
+++ b/work2.html
@@ -79,7 +79,7 @@
     </section>
 
     <footer>
-        <p>&copy; Sarah Onderdonk Portfolio. All rights reserved.</p>
+        <p style="color: #f9f9f9;">&copy; Sarah Onderdonk Portfolio. All rights reserved.</p>
     </footer>
 </body>
 </html>
